@@ -34,12 +34,18 @@ noinst_PROGRAMS				= hildon-window-example				\
 					  hildon-bread-crumb-trail-example		\
 					  hildon-finger-example				\
 					  hildon-seekbar-example			\
-					  hildon-find-toolbar-example
+					  hildon-find-toolbar-example			\
+					  hildon-wizard-dialog-example
 
 # Hildon window
 hildon_window_example_LDADD		= $(HILDON_OBJ_LIBS)
 hildon_window_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
 hildon_window_example_SOURCES		= hildon-window-example.c
+
+# Hildon wizard dialog
+hildon_wizard_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
+hildon_wizard_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
+hildon_wizard_dialog_example_SOURCES	= hildon-wizard-dialog-example.c
 
 # Hildon find toolbar
 hildon_find_toolbar_example_LDADD	= $(HILDON_OBJ_LIBS)
